ghc-4335c07/testsuite/tests/indexed-types/should_fail/T9580.hs
module T9580 where

import T9580a
import Data.Coerce

foo :: Dimensional Int Double -> Double
foo x = coerce x
