ghc-4335c07/testsuite/tests/indexed-types/should_fail/T9580.stderr
[1 of 2] Compiling T9580a           ( T9580a.hs, T9580a.o )
[2 of 2] Compiling T9580            ( T9580.hs, T9580.o )

T9580.hs:7:9: error:
    Couldn't match representation of type ‘Dimensional Int Double’
                             with that of ‘Double’
      arising from a use of ‘coerce’
    The data constructor ‘T9580a.Quantity'’
      of newtype ‘Dimensional Int v’ is not in scope
    In the expression: coerce x
    In an equation for ‘foo’: foo x = coerce x
